# gcli2api2

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  darwin-install.sh  docker-compose.yml  format_detector.py  install.bat  install.ps1  install.sh  log.py  models.py  mongodb_setup.py  multi_user_auth_web.py  oauth_web.py  pyproject.toml  requirements-termux.txt  requirements.txt  start.bat  start.sh  template.yaml  termux-install.sh  termux-start.sh  web.py
.github/workflows/: docker-publish.yml
doc/: ANTI_COMMERCIAL.md  CONTRIBUTING.md  ENV_CREDENTIALS_USAGE.md  TEST_WEB_ROUTES.md
docs/: DONATE.md  README_EN.md
front/: control_panel.html  control_panel_mobile.html  multi_user_auth_web.html
geminicli/: auth_api.py  auth_web.html  auth_web_manager.html  client.py  config.py  credential_manager.py  google_api_client.py  models.py  oauth_web.html  openai_transformers.py  web_routes.py
geminicli/creds/: config.toml  creds_state.toml
src/: anti_truncation.py  auth.py  auth_api.py  credential_manager.py  format_detector.py  gemini_router.py  google_api_client.py  google_chat_api.py  google_oauth_api.py  httpx_client.py  memory_manager.py  models.py  mongodb_manager.py  openai_router.py  openai_transfer.py  retry_429.py  state_manager.py  storage_adapter.py  task_manager.py  usage_stats.py  utils.py  web_routes.py
src/mongodb/: migration_tool.py  mongodb_manager.py
src/storage/: cache_manager.py  file_storage_manager.py  mongodb_manager.py  postgres_manager.py  redis_manager.py
tools/: migration_tool.py
