[project]
name = "gcli2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "httpx[socks]>=0.28.1",
    "hypercorn>=0.17.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "toml>=0.10.2",
]
