[project]
name = "gcli2api"
version = "0.1.0"
description = "gcli2api"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "httpx[socks]>=0.28.1",
    "hypercorn>=0.17.3",
    "motor>=3.7.1",
    "oauthlib>=3.3.1",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "toml>=0.10.2",
]
